[package]
name = "osm_graph"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/kyleloving/osm_graph/tree/main"
keywords = ["OpenStreetMaps", "Isochrone", "Mobility", "Geo", "Petgraph"]
categories = ["science::geo", "simulation", "visualization"]
exclude = ["/examples", "*.png"]
description = "This library provides a set of tools for generating isochrones from geographic coordinates. It leverages OpenStreetMap data to construct road networks and calculate areas accessible within specified time limits. The library is designed for both Rust and Python, offering high performance and easy integration into data science workflows."

[lib]
name = "pysochrone"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.20.2", features = ["extension-module"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"
quick-xml = { version = "0.31", features = ["serialize"] }
serde = { version = "1.0" , features = ["derive"] }
petgraph = "0.6.4" 
geo = "0.27.0"
geojson = "0.24.1" 
lru = "0.12.2"
