[package]
name = "graphways"
version = "0.3.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/kyleloving/graphways"
keywords = ["OpenStreetMaps", "Isochrone", "Mobility", "Geo", "Petgraph"]
categories = ["science::geo", "simulation", "visualization"]
exclude = [
    "/.github",
    "/.venv",
    "/cache",
    "/data",
    "/docs",
    "/site",
    "/target",
    "/benchmarks",
    "/examples/*.py",
    "/*.html",
    "/*.png",
    "/graphways.pyi",
    "/mkdocs.yml",
    "/pyproject.toml",
    "/pysochrone.py",
]
description = "Fast OpenStreetMap reachability, routing, and isochrones from Python, powered by Rust — no routing server required."

[lib]
name = "graphways"
# cdylib  — Python extension module (.so / .pyd)
# rlib    — normal Rust library; lets other Rust crates depend on this package
crate-type = ["cdylib", "rlib"]

[features]
# Enable this feature only when building the Python extension (handled by maturin).
# Activating it pulls in pyo3 and compiles all Python bindings.
# Without it the crate is a plain Rust library with no Python dependency.
extension-module = ["pyo3/extension-module"]

[profile.profiling]
inherits = "release"
debug = true

[dependencies]
pyo3 = { version = "0.20.2", optional = true }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"
quick-xml = { version = "0.31", features = ["serialize"] }
serde = { version = "1.0" , features = ["derive"] }
petgraph = "0.6.4"
geo = "0.28.0"
geojson = "0.24.1"
lru = "0.12.2"
rstar = "0.12"
osmpbf = "0.3"
spade = "2.15.1"
